--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   <body>
     <div class="container">
       <h1>Random Quotes</h1>
-      <p id="quote">Click the button to see a random quote!</p>
-      <button id="geterate-btn">Get Random Quote</button>
+      <p id="quote" class="quote">Click the button to see a random quote</p>
+      <p id="quote-author">(author)</p>
+      <button id="geterate-btn" class="btn">Get Random Quote</button>
     </div>
     <script src="script.js"></script>
   </body>
