Splitting app into the modules

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
       <p id="quote-author">(author)</p>
       <button id="geterate-btn" class="btn">Get Random Quote</button>
     </div>
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>
   </body>
 </html>
