Show favorite quotes below current quote

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
       <p id="quote" class="quote">Click the button to see a random quote</p>
       <p id="quote-author">(author)</p>
       <button id="geterate-btn" class="btn">Get Random Quote</button>
+      <button id="toggle-favorite-btn" class="btn">Add to favorites</button>
     </div>
+
+    <div id="favorites-container" class="favorites-container"></div>
     <script src="script.js" type="module"></script>
   </body>
 </html>
