--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Random Quotes</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -11,8 +15,8 @@
       <h1>Random Quotes</h1>
       <p id="quote" class="quote">Click the button to see a random quote</p>
       <p id="quote-author">(author)</p>
-      <button id="geterate-btn" class="btn">Get Random Quote</button>
-      <button id="toggle-favorite-btn" class="btn">Add to favorites</button>
+      <button id="geterate-btn" class="btn">Generate Quote</button>
+      <i id="toggle-favorite-btn" class="far fa-star star-icon"></i>
     </div>
 
     <div id="favorites-container" class="favorites-container"></div>
