Favorites buttons icon and refactoring

--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     </div>
 
     <div id="favorites-container" class="favorites-container"></div>
-    <script src="script.js" type="module"></script>
+    <script src="index.js" type="module"></script>
   </body>
 </html>
