--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <p id="quote" class="quote">Click the button to see a random quote</p>
       <p id="quote-author"></p>
       <button id="geterate-btn" class="btn">Generate Quote</button>
-      <i id="toggle-favorite-btn" class="far fa-star star-icon"></i>
+      <i id="favorite-btn" class="far fa-star star-icon"></i>
     </div>
 
     <div id="favorites-container" class="favorites-container"></div>
