--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
           Click the button to see a random quote
         </p>
         <p id="quote-author" class="quote-author"></p>
-        <button id="geterate-btn" class="btn btn-primary">
-          Generate Quote
+        <button id="random-quote-btn" class="btn btn-primary">
+          Get random quote
         </button>
         <i id="quote-favorite-btn" class="far fa-star star-icon"></i>
       </div>
